--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,26 +4,6 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'io.fabric'
 
-buildscript {
-    repositories {
-        maven { url 'https://maven.fabric.io/public' }
-    }
-
-    dependencies {
-        // These docs use an open ended version so that our plugin
-        // can be updated quickly in response to Android tooling updates
-
-        // We recommend changing it to the latest version from our changelog:
-        // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
-        classpath 'io.fabric.tools:gradle:1.+'
-    }
-}
-
-repositories {
-    maven { url 'https://maven.fabric.io/public' }
-    mavenCentral()
-}
-
 android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
@@ -105,13 +85,10 @@ dependencies {
     implementation 'com.googlecode.libphonenumber:libphonenumber:7.2.2'
     implementation 'com.karumi:dexter:5.0.0'
     implementation "me.leolin:ShortcutBadger:1.1.22@aar"
+    implementation 'me.relex:circleindicator:1.2.2@aar'
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
         transitive = true;
     }
-}
-
-repositories {
-    mavenCentral()
 }
 
 apply plugin: 'com.google.gms.google-services'
